# dav-cms

./: .cvsignore  ChangeLog  Makefile  Makefile.in  Workbook.txt  configure  configure.ac  dav_cms_monitor.c  dav_cms_monitor.h  dav_cms_props.c  dav_cms_props.h  dav_cms_repro.c  dav_cms_repro.h  mod_dav_cms.c  mod_dav_cms.h  modules.mk  svn_revision.h  svn_revision.h.in
debian/: changelog  control  copyright  dav-cms.load  dav_cms.load  docs  libapache2-mod-dav-cms.install  prerm  rules
tests/: test-propfind-depth-1.http-twiddle
