# Process this file with autoconf to produce a configure script.
AC_INIT
AC_CONFIG_SRCDIR([mod_dav_cms.c])
# AC_CONFIG_HEADER([config.h])

# Checks for programs.
AC_PROG_CC

# AC_PROG_INSTALL

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

# Checks for library functions.

AC_CONFIG_FILES([Makefile])
#                 docs/latex/Makefile])
AC_OUTPUT
